tests/snapshots/test_runner__tests__compiler__parse__unexpected_eof_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let f = (x: Int)

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/parse/unexpected_eof_1.kk:1:7
  │
1 │ let f = (x: Int)
  │       ^ Syntax error: not expecting `=` here
  │
  = The expected token here is `:`.

    Note that `=` is used for declaring variables locally, for example:

    let x = 1.

    We found this error when we are trying to parse a Let Statement.
    Examples of Let Statement are:

    Example #1:

      let x : Integer = 1

    Example #2:

      let identity = <T>(t: T): T => t
